@@ -1,13 +1,10 @@
 package com.sentrysoftware.matrix.converter.state.computes.leftconcat;
 
-import java.util.Collections;
 import java.util.Set;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
-
 import com.sentrysoftware.matrix.converter.state.IConnectorStateConverter;
 import com.sentrysoftware.matrix.converter.state.computes.common.ColumnProcessor;
 import com.sentrysoftware.matrix.converter.state.computes.common.ComputeTypeProcessor;
+import com.sentrysoftware.matrix.converter.state.computes.common.StringProcessor;
 
 import lombok.AccessLevel;
 import lombok.NoArgsConstructor;
@@ -15,10 +12,14 @@ import lombok.NoArgsConstructor;
 @NoArgsConstructor(access = AccessLevel.PRIVATE)
 public class ConnectorLeftConcatProperty {
 
-	private static final String HDF_TYPE_VALUE = "";
-	private static final String YAML_TYPE_VALUE = "";
+	private static final String HDF_TYPE_VALUE = "LeftConcat";
+	private static final String YAML_TYPE_VALUE = "leftConcat";
 
 	public static Set<IConnectorStateConverter> getConnectorProperties() {
-		return Collections.emptySet();
+		return Set.of(
+			new ComputeTypeProcessor(HDF_TYPE_VALUE, YAML_TYPE_VALUE),
+			new ColumnProcessor(),
+			new StringProcessor()
+		);
 	}
 }
